# pepper_object_detection

./: .gitignore  CMakeLists.txt  README.md  package.xml  setup.py
config/: default.yaml
detector_node/: detector_node
doc/: architettura.tex  biblio.bib  conclusioni.tex  detector.tex  intro.tex  main.aux  main.bcf  main.blg  main.fdb_latexmk  main.fls  main.out  main.run.xml  main.tex  main.toc  risultati.tex  soluzione.tex
doc/Images/: Architettura.pdf_tex
launch/: pepper_object_detection.launch
master_node/: master.py  master_node.py  master_utils.py  test_master_node.py  test_stitching.py
mover/: CMakeLists.txt  mover.py  package.xml
pose_node/: pose_node.py
sample_code/detector_node/: detector_node
sample_code/mover/: mover.py
sample_code/pose_node/: pose_node.py
sample_code/visualization_node/: visualization_node
scripts/: mover_server_test.py  nao_server_test.py  object_detection_server_test.py  pepper_mover_server.py  pepper_nao_server.py  pepper_object_detection_server.py  pepper_object_detection_server_np.py  pepper_tts_server.py  tts_server_test.py
services/: pepper_nao_server.py  pepper_object_detection_server.py  pepper_object_detection_server_np.py
src/pepper_object_detection/: __init__.py  classmap.py  detector.py  stitcher.py
srv/: pepper_head_mover.srv  pepper_object_detection.srv  pepper_object_detection_np.srv  pepper_pose.srv  pepper_tts.srv
test/: nao_server_test.py  object_detection_server_test.py  test_stitching.py
visualization_node/: visualization_node
