<?xml version="1.0"?>
<package>
  <name>mover</name>
  <version>1.0.0</version>
  <description>Generic keyboard teleop for Ppper Robot.</description>

  <maintainer email="MISSING@missing.it">Ruka Botcha</maintainer>

  <license>TODO</license>

  <url type="website">TODO</url>

  <author>Ruka Botcha</author>

  <buildtool_depend>catkin</buildtool_depend>
  <run_depend>geometry_msgs</run_depend>
  <run_depend>rospy</run_depend>
</package>
